--- a/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmSampleLoad.en.resx
+++ b/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmSampleLoad.en.resx
@@ -524,7 +524,7 @@
 </value>
   </data>
   <data name="fbtnRunInfoMody.Location" type="System.Drawing.Point, System.Drawing">
-    <value>188, 73</value>
+    <value>215, 73</value>
   </data>
   <data name="fbtnRunInfoMody.Size" type="System.Drawing.Size, System.Drawing">
     <value>120, 40</value>
@@ -597,7 +597,7 @@
 </value>
   </data>
   <data name="btnCreatWorkList.Location" type="System.Drawing.Point, System.Drawing">
-    <value>188, 24</value>
+    <value>215, 24</value>
   </data>
   <data name="btnCreatWorkList.Size" type="System.Drawing.Size, System.Drawing">
     <value>120, 40</value>
@@ -748,8 +748,14 @@
   <data name="btnLoadSp.Text" xml:space="preserve">
     <value>Loading Sample</value>
   </data>
-  <data name="groupBox2.Text" xml:space="preserve">
-    <value>Operation</value>
+  <data name="groupBox2.Location" type="System.Drawing.Point, System.Drawing">
+    <value>447, 411</value>
+  </data>
+  <data name="groupBox1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>447, 42</value>
+  </data>
+  <data name="groupBox1.Text" xml:space="preserve">
+    <value>Sample Information</value>
   </data>
   <data name="Position.HeaderText" xml:space="preserve">
     <value>Position</value>
@@ -772,8 +778,14 @@
   <data name="dataGridViewTextBoxColumn2.HeaderText" xml:space="preserve">
     <value>Emergency</value>
   </data>
-  <data name="groupBox1.Text" xml:space="preserve">
-    <value>Sample Information</value>
+  <data name="groupBox3.Location" type="System.Drawing.Point, System.Drawing">
+    <value>2, 421</value>
+  </data>
+  <data name="groupBox3.Size" type="System.Drawing.Size, System.Drawing">
+    <value>112, 125</value>
+  </data>
+  <data name="groupBox3.Text" xml:space="preserve">
+    <value>Reagent Legend</value>
   </data>
   <data name="label17.Size" type="System.Drawing.Size, System.Drawing">
     <value>47, 12</value>
@@ -805,14 +817,14 @@
   <data name="label2.Text" xml:space="preserve">
     <value>Unloaded</value>
   </data>
-  <data name="groupBox3.Location" type="System.Drawing.Point, System.Drawing">
-    <value>2, 421</value>
+  <data name="groupBox4.Location" type="System.Drawing.Point, System.Drawing">
+    <value>321, 442</value>
   </data>
-  <data name="groupBox3.Size" type="System.Drawing.Size, System.Drawing">
-    <value>112, 125</value>
+  <data name="groupBox4.Size" type="System.Drawing.Size, System.Drawing">
+    <value>114, 104</value>
   </data>
-  <data name="groupBox3.Text" xml:space="preserve">
-    <value>Reagent Legend</value>
+  <data name="groupBox4.Text" xml:space="preserve">
+    <value>Sample Legend</value>
   </data>
   <data name="label6.Location" type="System.Drawing.Point, System.Drawing">
     <value>29, 75</value>
@@ -841,14 +853,8 @@
   <data name="label9.Text" xml:space="preserve">
     <value>Unloaded</value>
   </data>
-  <data name="groupBox4.Location" type="System.Drawing.Point, System.Drawing">
-    <value>368, 442</value>
-  </data>
-  <data name="groupBox4.Size" type="System.Drawing.Size, System.Drawing">
-    <value>114, 104</value>
-  </data>
-  <data name="groupBox4.Text" xml:space="preserve">
-    <value>Sample Legend</value>
+  <data name="srdReagent.Location" type="System.Drawing.Point, System.Drawing">
+    <value>-8, 13</value>
   </data>
   <data name="keywordText.CalibrationSolution" xml:space="preserve">
     <value>Calibration Solution</value>
@@ -894,14 +900,5 @@
   </data>
   <data name="keywordText.UpdateRunningInfomation" xml:space="preserve">
     <value>Run Information Modify</value>
-  </data>
-  <data name="DispathchTypeAdd" xml:space="preserve">
-    <value>Sample addition</value>
-  </data>
-  <data name="DispathchTypeSampleProject" xml:space="preserve">
-    <value>Same project</value>
-  </data>
-  <data name="DispathchTypeSpeed" xml:space="preserve">
-    <value>Speed first</value>
   </data>
 </root>
