--- a/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/frmMain.resx
+++ b/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/frmMain.resx
@@ -274,7 +274,7 @@
         RudN65tdA8sHzg46DF645Xrr8m2v29fvrLwzMBQydHc4cnjkLvvu5L2key/vZ9yff7DpIfph4SOpR+WP
         lR7X/aj3Y+uI5ciZUdfRvidBTx6Mscae/5T+04fx/Kfkp+UTqhONk2aTp6fcp24+W/1s/Hnq8/npgp+l
         f65+ofviu18cf+mbWTUz/pL/cuHX4lfyr468Xva6e9Z/9vGb5Dfzc4Vv5d8efcd41/s+7P3EfOYH7IeK
-        j3ofuz55f3q4kLyw8Bv3hPP74uYdwgAAAAlwSFlzAAALDQAACw0B7QfALAAAAKRJREFUeF7t0+1mwgEA
+        j3ofuz55f3q4kLyw8Bv3hPP74uYdwgAAAAlwSFlzAAALDAAACwwBP0AiyAAAAKRJREFUeF7t0+1mwgEA
         hfFzv72YIolEIvZpl9HLMiWRpIzuZKnMbM0sqzj738bh+fDjuYFHT5svA8ih0uDNAHIU0+6LAJBCpWER
         AGKoPDoYQA5VxkcDyKHq88kAcuhh8m4AOVR7+TCAHKpPPw0ghxqzswHkUHP+bQA51Fr8GEAOtZe/BpBD
         ndXFAHKou/4zgBzqba8GkEP915sB5NDj7m4AKe7+B7mBnJ1F7YdkAAAAAElFTkSuQmCC
@@ -331,7 +331,7 @@
         RudN65tdA8sHzg46DF645Xrr8m2v29fvrLwzMBQydHc4cnjkLvvu5L2key/vZ9yff7DpIfph4SOpR+WP
         lR7X/aj3Y+uI5ciZUdfRvidBTx6Mscae/5T+04fx/Kfkp+UTqhONk2aTp6fcp24+W/1s/Hnq8/npgp+l
         f65+ofviu18cf+mbWTUz/pL/cuHX4lfyr468Xva6e9Z/9vGb5Dfzc4Vv5d8efcd41/s+7P3EfOYH7IeK
-        j3ofuz55f3q4kLyw8Bv3hPP74uYdwgAAAAlwSFlzAAALDQAACw0B7QfALAAAO0VJREFUeF7tnQVYVGkX
+        j3ofuz55f3q4kLyw8Bv3hPP74uYdwgAAAAlwSFlzAAALDAAACwwBP0AiyAAAO0VJREFUeF7tnQVYVGkX
         x4+FIt0zMMB00t2KIOraXWt3rrq2a3e7dncHdq5rrr12rLEGdq27roR9v3PeywADg4KwrvvJPM/fwcsA
         997ze0+8dYFewUGlYeK4OdC5U0/o1oXUK5fqCYMGDofw0DgoVtgOREIVqFW+4OcTCVGRFeCbCrWhbp1m
         0LljH5g+dSHERFfDv1oCnBzUIBV7gYc2AAL9S0GZMlWgerW60KxZG/x9o6Bj+65Q0tQBrK3cwNFBDhI3
@@ -664,7 +664,7 @@
         RudN65tdA8sHzg46DF645Xrr8m2v29fvrLwzMBQydHc4cnjkLvvu5L2key/vZ9yff7DpIfph4SOpR+WP
         lR7X/aj3Y+uI5ciZUdfRvidBTx6Mscae/5T+04fx/Kfkp+UTqhONk2aTp6fcp24+W/1s/Hnq8/npgp+l
         f65+ofviu18cf+mbWTUz/pL/cuHX4lfyr468Xva6e9Z/9vGb5Dfzc4Vv5d8efcd41/s+7P3EfOYH7IeK
-        j3ofuz55f3q4kLyw8Bv3hPP74uYdwgAAAAlwSFlzAAALDQAACw0B7QfALAAAAzFJREFUeF7t2MtL1FEY
+        j3ofuz55f3q4kLyw8Bv3hPP74uYdwgAAAAlwSFlzAAALDAAACwwBP0AiyAAAAzFJREFUeF7t2MtL1FEY
         h/FW/gcRrYIgDEGDoAtFRRRitGtTiYsIohZFIkG2iIjI6GJKU9IgKaUW0c1CmUSN7KZpZlrTZGqllkpE
         CUEQCKfzLqbO4MC71bdn8YE5P87M7vvMMHOcc2llbLmQ6ZV6L7wpzwGY8WSrslnZbma6bYfSPvRvLPJ+
         Hah67OoeJlxX/7jrHpgAMMPJVmWzsl3ZsGw53caTUg7+coYX23oq5m4/G3Sd/RMAZinZsGxZNi3bDree
@@ -750,7 +750,7 @@
   <data name="dbtnConnect.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DQAACw0B7QfALAAAAAd0SU1FB9kBDRcNOysjNLYAACDwSURBVHhe7Z0L2GVT/cdPIVRUREJulemiBl2E
+        DAAACwwBP0AiyAAAAAd0SU1FB9kBDRcNOysjNLYAACDwSURBVHhe7Z0L2GVT/cdPIVRUREJulemiBl2E
         RJGULqSRJIpyGUwJY0wzNLcwg2ZqMo7EMIUxIyXTUO8Yo3GrwTCRWy7lWi5jkj+eWP/fZz3ne56fZe1z
         9pn3zDuXc/bzfJ9z3vPusy/r8/391tprr71Opbt0l+7SXbpLd+ku3aW7dJflbpk9e3Zl7ty5lZtuuqly
         8803V2699dao2267Ler222+PuuOOO6Luuuuuyt1331259957o/7+979X7rvvvsoDDzwQ9eCDD1b++c9/
@@ -971,7 +971,7 @@
         RudN65tdA8sHzg46DF645Xrr8m2v29fvrLwzMBQydHc4cnjkLvvu5L2key/vZ9yff7DpIfph4SOpR+WP
         lR7X/aj3Y+uI5ciZUdfRvidBTx6Mscae/5T+04fx/Kfkp+UTqhONk2aTp6fcp24+W/1s/Hnq8/npgp+l
         f65+ofviu18cf+mbWTUz/pL/cuHX4lfyr468Xva6e9Z/9vGb5Dfzc4Vv5d8efcd41/s+7P3EfOYH7IeK
-        j3ofuz55f3q4kLyw8Bv3hPP74uYdwgAAAAlwSFlzAAALDQAACw0B7QfALAAAAzFJREFUeF7t2MtL1FEY
+        j3ofuz55f3q4kLyw8Bv3hPP74uYdwgAAAAlwSFlzAAALDAAACwwBP0AiyAAAAzFJREFUeF7t2MtL1FEY
         h/FW/gcRrYIgDEGDoAtFRRRitGtTiYsIohZFIkG2iIjI6GJKU9IgKaUW0c1CmUSN7KZpZlrTZGqllkpE
         CUEQCKfzLqbO4MC71bdn8YE5P87M7vvMMHOcc2llbLmQ6ZV6L7wpzwGY8WSrslnZbma6bYfSPvRvLPJ+
         Hah67OoeJlxX/7jrHpgAMMPJVmWzsl3ZsGw53caTUg7+coYX23oq5m4/G3Sd/RMAZinZsGxZNi3bDree
@@ -1071,7 +1071,7 @@
         RudN65tdA8sHzg46DF645Xrr8m2v29fvrLwzMBQydHc4cnjkLvvu5L2key/vZ9yff7DpIfph4SOpR+WP
         lR7X/aj3Y+uI5ciZUdfRvidBTx6Mscae/5T+04fx/Kfkp+UTqhONk2aTp6fcp24+W/1s/Hnq8/npgp+l
         f65+ofviu18cf+mbWTUz/pL/cuHX4lfyr468Xva6e9Z/9vGb5Dfzc4Vv5d8efcd41/s+7P3EfOYH7IeK
-        j3ofuz55f3q4kLyw8Bv3hPP74uYdwgAAAAlwSFlzAAALDQAACw0B7QfALAAAAzFJREFUeF7t2MtL1FEY
+        j3ofuz55f3q4kLyw8Bv3hPP74uYdwgAAAAlwSFlzAAALDAAACwwBP0AiyAAAAzFJREFUeF7t2MtL1FEY
         h/FW/gcRrYIgDEGDoAtFRRRitGtTiYsIohZFIkG2iIjI6GJKU9IgKaUW0c1CmUSN7KZpZlrTZGqllkpE
         CUEQCKfzLqbO4MC71bdn8YE5P87M7vvMMHOcc2llbLmQ6ZV6L7wpzwGY8WSrslnZbma6bYfSPvRvLPJ+
         Hah67OoeJlxX/7jrHpgAMMPJVmWzsl3ZsGw53caTUg7+coYX23oq5m4/G3Sd/RMAZinZsGxZNi3bDree
@@ -1189,7 +1189,7 @@
         RudN65tdA8sHzg46DF645Xrr8m2v29fvrLwzMBQydHc4cnjkLvvu5L2key/vZ9yff7DpIfph4SOpR+WP
         lR7X/aj3Y+uI5ciZUdfRvidBTx6Mscae/5T+04fx/Kfkp+UTqhONk2aTp6fcp24+W/1s/Hnq8/npgp+l
         f65+ofviu18cf+mbWTUz/pL/cuHX4lfyr468Xva6e9Z/9vGb5Dfzc4Vv5d8efcd41/s+7P3EfOYH7IeK
-        j3ofuz55f3q4kLyw8Bv3hPP74uYdwgAAAAlwSFlzAAALDQAACw0B7QfALAAAAaJJREFUeF7t091KVHEY
+        j3ofuz55f3q4kLyw8Bv3hPP74uYdwgAAAAlwSFlzAAALDAAACwwBP0AiyAAAAaJJREFUeF7t091KVHEY
         hfH3fq2IgogghAiCDmp2UEQeKKjgzBilRVDT9EWCBxaRHXRSUIwzkx9NWRSVf1bvBr2HveA5+C3WDTzR
         ebuv9qElAI1z1Gfdanfzh2Lh1UTzABqvbnXx9UQxu74rAB7mUsy83BYAH3Hz+VgAfMT1/lAAfMS13kAA
         fET1aCAAPqKVA8BHXM0B4COj3coDwAXRAmYy2mEeAC4y2lEeAC6i1RsLgI+MdjsPABdRPd4RAB9R9XcF
@@ -1943,7 +1943,7 @@
         RudN65tdA8sHzg46DF645Xrr8m2v29fvrLwzMBQydHc4cnjkLvvu5L2key/vZ9yff7DpIfph4SOpR+WP
         lR7X/aj3Y+uI5ciZUdfRvidBTx6Mscae/5T+04fx/Kfkp+UTqhONk2aTp6fcp24+W/1s/Hnq8/npgp+l
         f65+ofviu18cf+mbWTUz/pL/cuHX4lfyr468Xva6e9Z/9vGb5Dfzc4Vv5d8efcd41/s+7P3EfOYH7IeK
-        j3ofuz55f3q4kLyw8Bv3hPP74uYdwgAAAAlwSFlzAAALDQAACw0B7QfALAAASCxJREFUeF7tnQWcFFe2
+        j3ofuz55f3q4kLyw8Bv3hPP74uYdwgAAAAlwSFlzAAALDAAACwwBP0AiyAAASCxJREFUeF7tnQWcFFe2
         xgt3CAkEd3e3YfCZwTUECRCCE9wTLAkkENzdgwd3t3F3d59hGCCym327b+W877vdBT1DMQwSeRvm9/5b
         3SVd997vu+ecW93haSLylj8xhjvf8ufBcOdb/jwY7nzLnwfDnW/582C48y1/Hgx36txKTHttboPrCfe1
         y3Gp2vmYZO0COBudrJ2JStKuxN7XbsanaVdx7GxUsnYDry/H3NfO4bV9crp2JyFNu4Zj1+Pua1djUzXX
@@ -2323,7 +2323,7 @@
         RudN65tdA8sHzg46DF645Xrr8m2v29fvrLwzMBQydHc4cnjkLvvu5L2key/vZ9yff7DpIfph4SOpR+WP
         lR7X/aj3Y+uI5ciZUdfRvidBTx6Mscae/5T+04fx/Kfkp+UTqhONk2aTp6fcp24+W/1s/Hnq8/npgp+l
         f65+ofviu18cf+mbWTUz/pL/cuHX4lfyr468Xva6e9Z/9vGb5Dfzc4Vv5d8efcd41/s+7P3EfOYH7IeK
-        j3ofuz55f3q4kLyw8Bv3hPP74uYdwgAAAAlwSFlzAAALDQAACw0B7QfALAAAIUJJREFUeF7tnXd8VUX6
+        j3ofuz55f3q4kLyw8Bv3hPP74uYdwgAAAAlwSFlzAAALDAAACwwBP0AiyAAAIUJJREFUeF7tnXd8VUX6
         xg+ICIIoujasa11AsdM70rEgq4h0kI40QcW2NBGVBRSpQgi9QxoEEiCdFBJSCOk9N7lpdBF2/en5vc/c
         M5e5lzkn0SVyQu4f3889572nzLzPM+/M3OCuoqqqi2qMNOii+iANuqg+SIMuqg/SoIvqgzToovogDbqo
         PkiDLqoP0qCL6oM06KL6IA0aUfLL5T9M6aXLSta5n5WYkjOMI/klSqClVDmYU6SEFJQqoQVlSlhhmRJA
@@ -2766,7 +2766,7 @@
         RudN65tdA8sHzg46DF645Xrr8m2v29fvrLwzMBQydHc4cnjkLvvu5L2key/vZ9yff7DpIfph4SOpR+WP
         lR7X/aj3Y+uI5ciZUdfRvidBTx6Mscae/5T+04fx/Kfkp+UTqhONk2aTp6fcp24+W/1s/Hnq8/npgp+l
         f65+ofviu18cf+mbWTUz/pL/cuHX4lfyr468Xva6e9Z/9vGb5Dfzc4Vv5d8efcd41/s+7P3EfOYH7IeK
-        j3ofuz55f3q4kLyw8Bv3hPP74uYdwgAAAAlwSFlzAAAOvgAADr4B6kKxwAAAKABJREFUeF7tnXlcVee9
+        j3ofuz55f3q4kLyw8Bv3hPP74uYdwgAAAAlwSFlzAAAOvQAADr0BR/uQrQAAKABJREFUeF7tnXlcVee9
         7ntPz2l729vhtOlJb9M2MRozGWOqMUOTmJg5amKcFRARFAdEEFFkVkFmZ41TnAUHUBxwABUEZR5lUJxw
         ABFikqZpevs5//zu87xrr83amwWiJPlw6v7j69YNst73+a7fO6y9WfsHIuLgXwjTJ++V2i//+0cH677p
         lVD65bDJJ5sDyZCDjSv67ryRcr/zekrDJj0T5pNY+/XLzMssx85g+uTdUNL8z1+HF3wxwSBOHHQYJZr5
@@ -3238,7 +3238,7 @@
         RudN65tdA8sHzg46DF645Xrr8m2v29fvrLwzMBQydHc4cnjkLvvu5L2key/vZ9yff7DpIfph4SOpR+WP
         lR7X/aj3Y+uI5ciZUdfRvidBTx6Mscae/5T+04fx/Kfkp+UTqhONk2aTp6fcp24+W/1s/Hnq8/npgp+l
         f65+ofviu18cf+mbWTUz/pL/cuHX4lfyr468Xva6e9Z/9vGb5Dfzc4Vv5d8efcd41/s+7P3EfOYH7IeK
-        j3ofuz55f3q4kLyw8Bv3hPP74uYdwgAAAAlwSFlzAAALDQAACw0B7QfALAAAIBxJREFUeF7tnQd4XNWZ
+        j3ofuz55f3q4kLyw8Bv3hPP74uYdwgAAAAlwSFlzAAALDAAACwwBP0AiyAAAIBxJREFUeF7tnQd4XNWZ
         hm9ClsCShJDdhGSzu7AQkg2puySAMcXYiQFDCngTQigmkNCDbcDUQGzsAAFiYwy44EbcwUXVsiVZvWvU
         R12jkUYjjZolWXIRLtz9vjtz5OvxP1djgqwZa+Z53mdG/9zyl+/855wrF03X9QhjGNEYYewgGiOMHURj
         hLGDaIwwdhCNEcYOojHC2EE0Rhg7iMYIYwfRGGHsIBqt6Nw/eMJ0HRjUGvfs1Yo6ew1SWjq1NHeXtrOp
@@ -3444,7 +3444,7 @@
         RudN65tdA8sHzg46DF645Xrr8m2v29fvrLwzMBQydHc4cnjkLvvu5L2key/vZ9yff7DpIfph4SOpR+WP
         lR7X/aj3Y+uI5ciZUdfRvidBTx6Mscae/5T+04fx/Kfkp+UTqhONk2aTp6fcp24+W/1s/Hnq8/npgp+l
         f65+ofviu18cf+mbWTUz/pL/cuHX4lfyr468Xva6e9Z/9vGb5Dfzc4Vv5d8efcd41/s+7P3EfOYH7IeK
-        j3ofuz55f3q4kLyw8Bv3hPP74uYdwgAAAAlwSFlzAAALDQAACw0B7QfALAAAIzBJREFUeF7tnQd8VFX2
+        j3ofuz55f3q4kLyw8Bv3hPP74uYdwgAAAAlwSFlzAAALDAAACwwBP0AiyAAAIzBJREFUeF7tnQd8VFX2
         x2fX/bu6rrvr7mJZ3QVRUVGxYKFJVZogTYoKooBIbwLSpCNVEBUpUqWHlh5IQnrPpBLS62TSQ+iCot7/
         +b2ZG14m5z2CEjKSmc/n+5nJuW/ePfec3z333pegBiGEg3oMa3RQf2CNDuoPrNFB/YE1Oqg/sEYH9QfW
         6KD+wBod1B9Yo4P6A2t0UH9gjXqUfn/5uim7dNmQffaCIab0tIJffqkhwFxmOJZbbAguKDOEFJQbQgvL
@@ -3663,7 +3663,7 @@
         RudN65tdA8sHzg46DF645Xrr8m2v29fvrLwzMBQydHc4cnjkLvvu5L2key/vZ9yff7DpIfph4SOpR+WP
         lR7X/aj3Y+uI5ciZUdfRvidBTx6Mscae/5T+04fx/Kfkp+UTqhONk2aTp6fcp24+W/1s/Hnq8/npgp+l
         f65+ofviu18cf+mbWTUz/pL/cuHX4lfyr468Xva6e9Z/9vGb5Dfzc4Vv5d8efcd41/s+7P3EfOYH7IeK
-        j3ofuz55f3q4kLyw8Bv3hPP74uYdwgAAAAlwSFlzAAALDQAACw0B7QfALAAAJpVJREFUeF7tnQd8VMX2
+        j3ofuz55f3q4kLyw8Bv3hPP74uYdwgAAAAlwSFlzAAALDAAACwwBP0AiyAAAJpVJREFUeF7tnQd8VMX2
         x9eGKCLyVLCDYnnq04fPvyJFRaJ0C2AHRIooSBcMoigIAkon9BJB6SQhPZCE9J5ND+m9N0JVsJ7/+U12
         wmWZvQlKEiR7P5/v291z7945c35nzszcDT4DEVlpxiiNVpoPSqOV5oPSaKX5oDRaaT4ojVaaD0qjleaD
         0mil+aA0Wmk+KI1Wmg9Kox4VP5+5YCpPnzHkHD9liKk4KvArrDAEFFUaDuaVGYKLKw0hxVWG0JIqgz/b
@@ -4375,7 +4375,7 @@
         RudN65tdA8sHzg46DF645Xrr8m2v29fvrLwzMBQydHc4cnjkLvvu5L2key/vZ9yff7DpIfph4SOpR+WP
         lR7X/aj3Y+uI5ciZUdfRvidBTx6Mscae/5T+04fx/Kfkp+UTqhONk2aTp6fcp24+W/1s/Hnq8/npgp+l
         f65+ofviu18cf+mbWTUz/pL/cuHX4lfyr468Xva6e9Z/9vGb5Dfzc4Vv5d8efcd41/s+7P3EfOYH7IeK
-        j3ofuz55f3q4kLyw8Bv3hPP74uYdwgAAAAlwSFlzAAALDQAACw0B7QfALAAAJ11JREFUeF7tnQd4VEUX
+        j3ofuz55f3q4kLyw8Bv3hPP74uYdwgAAAAlwSFlzAAALDAAACwwBP0AiyAAAJ11JREFUeF7tnQd4VEUX
         hleaoBTp4o9iRbFgQRGkJ/SigAVRithAOoiCYKE3EUQ6YgCBEHp6SEJ67xXS+yabRhdBUOc/3+xOuCyz
         l6DZbCTZ53mf3T17750z53xzZuZmFzSMsRqqMVJjDdUHqbGG6oPUWEP1QWqsofogNdZQfZAaa6g+SI01
         VB+kxhqqD1JjDdUHqVGN4t+v3DYll69oMs//pokqPsvxzivW+GpLNO7ZhZqA/BJNYH6pJqigVONDdryO
@@ -6046,7 +6046,7 @@
     <value>未读</value>
   </data>
   <data name="NotRun" xml:space="preserve">
-    <value>实验未在运行，请勿进行暂停操作！</value>
+    <value>实验未在运行，请勿进行停止操作！</value>
   </data>
   <data name="Notstandardtemperature" xml:space="preserve">
     <value>未达到标准</value>
