--- a/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/ScalingQC/frmQC.en.resx
+++ b/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/ScalingQC/frmQC.en.resx
@@ -1222,4 +1222,7 @@
   <data name="keywordText.QCRules" xml:space="preserve">
     <value>Please select quality control rule</value>
   </data>
+  <data name="keywordText.null" xml:space="preserve">
+    <value>The value is empty, this operation failed</value>
+  </data>
 </root>
